--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,4 @@
 
 
 
-<!-- <input type="text" ngModel id="jobUniqueId" id="jobUniqueId" [(ngModel)]="jobUniqueId"> -->
-
-<!-- <button (click)="subscribeToProduct()">Notification vaa daaa </button> -->
-
-
-
-<!-- <div class="Click" (click)="call()">
-    <div class="notClick" #notClickDiv (click)="notClickDivClick($event)">
-      <button (click)="call()">flksdkjlf</button>
-    </div>
-  </div> -->
+<ng-toast [style]="{ width: '300px', paddingTop: '30px' }"></ng-toast>
