--- a/src/app/modules/applied-jobs/applied-jobs.component.html
+++ b/src/app/modules/applied-jobs/applied-jobs.component.html
@@ -27,7 +27,7 @@
                 </div>
                 <!-- (click)="showJobDetails(Apply.JobUniqueId)" -->
               </div>
-              <hr style="border: 1.2px solid; margin-top: 19px;">
+              <hr style="border: 1.2px solid;">
             </div>
           </div>
         </div>
