--- a/src/app/modules/authors/authors.component.scss
+++ b/src/app/modules/authors/authors.component.scss
@@ -18,8 +18,8 @@
 
   .rrpublogoimg1 {
     width: 100px;
-    height: 65px;
-    margin-top: 6px;
+    // height: 65px;
+    margin-top: 14px;
   }
 
   .rrcomcenalign1 {
@@ -214,7 +214,7 @@ color: #A426D1;
     align-self: center;
     color: #FFF;
     font-family: League Spartan;
-    font-size: 19px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 27px;
