--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -3,7 +3,7 @@
         <div class="container mt-3">
             <div class="row">
                 <div class="col-3">
-                    <img routerLink="/" src="../assets/Artboard 1 1.png" alt="Pubkin">
+                    <img routerLink="/" src="./assets/logo.png" class="rrlogoimg" alt="Pubkin">
                 </div>
                 <div class="col-9">
                 </div>
@@ -265,7 +265,7 @@
                                 [attr.aria-label]="hide1 ? 'Hide password' : 'Show password'" [attr.aria-pressed]="hide1"
                                 style="cursor: pointer;">
                                 <div class="eyesvg">
-                                <span class="material-icons">
+                                <span class="material-icons kkvticon">
                                     {{ hide1 ? 'visibility_off' : 'visibility' }}
                                 </span>
                             </div>
