--- a/src/app/modules/signup/signup.component.scss
+++ b/src/app/modules/signup/signup.component.scss
@@ -10,6 +10,11 @@ left:20%;
 padding: 69px 90px 47px 129px;
 }
 
+.rrlogoimg {
+    width: 100px;
+    // height: 65px;
+    margin-top: 10px;
+  }
 
 .passwordbox {
     position: relative;
@@ -51,7 +56,7 @@ line-height: 36px; /* 150% */
 .head{ 
     color: #1C1C1C;
     font-family: "League Spartan",sans-serif;
-    font-size: 39px;
+    font-size: 26px;
     font-style: normal;
     font-weight: 500;
     margin-top: 55px;
@@ -99,7 +104,7 @@ border: 1px solid #A426D1;
 .meme { 
     color: #545454;
     font-family: "League Spartan",sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     margin-top: 14px;
@@ -147,7 +152,6 @@ border: 1px solid #A426D1;
 .radio1 { 
     margin-left: 20px;
 }
-
 .flx { 
     display: flex;
     justify-content: center ;
@@ -157,7 +161,7 @@ border: 1px solid #A426D1;
     color: #A426D1;
     text-align: center;
     font-family: "League Spartan",sans-serif;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
 }
 
@@ -201,7 +205,7 @@ border: 1px solid #A426D1;
     cursor: pointer;
     color: #FFF;
     font-family: "League Spartan",sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     margin-top: 26px;
@@ -279,7 +283,7 @@ border: 1px solid #A426D1;
 .cre {
     color: #FFF;
     font-family: "League Spartan",sans-serif;
-font-size: 20px;
+font-size: 18px;
 font-style: normal;
 font-weight: 500;
 margin-top: 20px;
@@ -341,7 +345,21 @@ line-height: normal;
     width: 20px;
     height: 20px;
 }
-
+.kkvticon{
+    
+font-family: 'Material Icons';
+font-weight: normal;
+font-style: normal;
+font-size: 23px;
+color: #A426D1;
+line-height: 1;
+letter-spacing: normal;
+text-transform: none;
+display: inline-block;
+white-space: nowrap;
+word-wrap: normal;
+direction: ltr;
+}
 .check123 { 
     --mdc-checkbox-selected-checkmark-color: white;
     --mdc-checkbox-selected-focus-icon-color: blueviolet;
