--- a/src/app/modules/forget-password/forget-password.component.html
+++ b/src/app/modules/forget-password/forget-password.component.html
@@ -8,10 +8,12 @@
     </div>
 </div>
 
+
+<div *ngIf="!passshow">
 <form>
     <div class="text-center flx">
 
-        <div class="ecard" style="height: 532px;">
+        <div class="ecard">
             <div class="fmt1">
                 <span class="emailforegtpass">
                     outgoing_mail
@@ -21,10 +23,38 @@
             <p class="forgetleft">Enter your Email address and select <span class="forgetleft2">Send Email.</span></p>
             <p class="forgetleft1">Email</p>
             <input type="email" class="int" style="width:430px" placeholder="Email" id="email" name="email">
-            <div class="flx left5">
+            <div class="flx1">
                 <button class="btnfr1" type="submit"><span>Cancel</span></button>
-                <button class="btnfr2" type="submit"><span>Send Email</span></button>
+                <button class="btnfr2" type="submit" (click)="pasword1()"><span>Send Email</span></button>
             </div>
         </div>
     </div>
 </form>
+</div>
+<br>
+
+<!-- forget password -->
+
+<div *ngIf="passshow">
+<form>
+    <div class="text-center flx">
+
+        <div class="ecard">
+            <div class="fmt1">
+                <span class="emailforegtpass">
+                    lock
+                </span>
+            </div>
+            <p class="head" style="margin-top: 32px;">Update Your Password</p>
+            <p class="forgetleft1">New Password</p>
+            <input type="password" class="int" style="width:430px" placeholder="New Password" id="newpassword" name="newpassword">
+            <p class="forgetleft1">Confirm Password</p>
+            <input type="password" class="int" style="width:430px" placeholder="Confirm Password" id="currentpassword" name="currentpassword">
+            <div class="flx1">
+                <button class="btnfr2" type="submit"><span>Submit</span></button>
+            </div>
+        </div>
+    </div>
+</form>
+
+</div>
