--- a/src/app/modules/forget-password/forget-password.component.scss
+++ b/src/app/modules/forget-password/forget-password.component.scss
@@ -1,10 +1,10 @@
 .ecard {
-    position: relative;
-    width: 596px;
-    height: 506px;
-    border-radius: 16px;
-    margin-top: 84px;
-    border: 1px solid #CBCBCB;
+        position: relative;
+        width: 516px;
+        height: 462px;
+        border-radius: 16px;
+        margin-top: 84px;
+        border: 1px solid #CBCBCB;
     -webkit-box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, .16), 0 9px 10px 0 rgba(0, 0, 0, .12);
     box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, .16), 0 9px 10px 0 rgba(0, 0, 0, .12);
 }
@@ -13,7 +13,7 @@
 .head {
     color: #1C1C1C;
     font-family: "League Spartan", sans-serif;
-    font-size: 39px;
+    font-size: 26px;
     font-style: normal;
     font-weight: 500;
     color: #A426D1;
@@ -26,76 +26,58 @@
     justify-content: center;
 }
 
+.flx1 {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 44px;
+}
 
 
 .btnfr1 {
     display: flex;
-    width: 142px;
-    
+    width: 109px;
     justify-content: center;
     align-items: center;
     gap: 8px;
     cursor: pointer;
     color: #A426D1;
     font-family: "League Spartan", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     margin-top: 26px;
     line-height: normal;
-    height: 50px;
-    border-radius: 30px;
-    border: 3px solid #FFF;
+    height: 40px;
+    border-radius: 6px;
+    border: 1px solid #a60dcc;
     background: #FFF;
 
 }
-
-
-.btnfr1:active {
-    font-family: "League Spartan", sans-serif;
-    font-size: 25px;
-    -webkit-box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, .16), 0 9px 10px 0 rgba(0, 0, 0, .12);
-    box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, .16), 0 9px 10px 0 rgba(0, 0, 0, .12);
-}
-
-
-
 .btnfr2 {
     display: flex;
-    width: 142px;
-    
+    width: 120px;
     justify-content: center;
     align-items: center;
     gap: 8px;
     cursor: pointer;
     color: #FFF;
     font-family: "League Spartan", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     margin-top: 26px;
     line-height: normal;
-    height: 50px;
-    border-radius: 30px;
-    border: 3px solid #A426D1;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #A426D1;
     background: #A426D1;
 
 }
-
-
-.btnfr2:active {
-    font-family: "League Spartan", sans-serif;
-    font-size: 25px;
-    -webkit-box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, .16), 0 9px 10px 0 rgba(0, 0, 0, .12);
-    box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, .16), 0 9px 10px 0 rgba(0, 0, 0, .12);
-}
-
-
 .emailforegtpass {
     font-family: 'Material Symbols Outlined';
     font-weight: normal;
     font-style: normal;
-    font-size: 105px;
+    font-size: 55px;
     line-height: 1;
     letter-spacing: normal;
     text-transform: none;
@@ -120,7 +102,7 @@
     font-size: 18px;
     margin-top: 32px;
     line-height: 30px;
-    margin-left: 84px;
+    margin-left: 46px;
 }
 
 span.forgetleft2{
@@ -133,7 +115,7 @@ span.forgetleft2{
     font-family: "League Spartan", sans-serif;
     font-size: 18px;
     margin-top: 23px;
-    margin-left: 84px;
+    margin-left: 46px;
     color: #A426D1;
     font-weight: 500;
 
@@ -153,7 +135,18 @@ span.forgetleft2{
     font-weight: 400;
 }
 
-.left5{
-    margin-left: 148px;
-    margin-top: 44px;
-}
+
+
+   
+
+
+input[type=text]:focus {
+    outline: none;  
+    border-color:#A426D1;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+    }
+    input[type=email]:focus {
+        outline: none;  
+        border-color:#A426D1;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+        }
