--- a/src/app/modules/freelancer/freelancer.component.html
+++ b/src/app/modules/freelancer/freelancer.component.html
@@ -74,8 +74,10 @@
                   <span *ngIf="JobPost.showMore || JobPost.showMoreIndex === i">{{JobPost.description}}...</span>
                   <span (click)="ShowMoreLess(i)" class="text-decoration-underline" style="cursor: pointer;">{{ JobPost.showMore ? 'Less' : 'More' }}  </span>
               </p>
-                <div class="kkjbtxtline4"><img src="../assets/startick.png"> Profile verified</div>
-                <div class="kkjbtxtline5"><img src="../assets/startick.png"> Paymeny verified</div>
+                <div class="kkjbtxtline4"><img src="../assets/startick.png" style="    width: 20px;
+                  margin-top: -3px;"> Profile verified</div>
+                <div class="kkjbtxtline5"><img src="../assets/startick.png" style="    width: 20px;
+                  margin-top: -3px;"> Paymeny verified</div>
                 <div class="kkjbtxtline6">Tracking_ID : {{JobPost.jobUniqueId}}</div>
               </div>
             </div>
@@ -87,7 +89,7 @@
           <div class="card kkjbprcrd" style=" width: 227px;">
             <img class="kkcrdimg"  *ngIf="UserData[0].profileUrl"  src={{UserData[0].profileUrl}}>
             <img class="kkcrdimg"  *ngIf="!UserData[0].profileUrl"  src="../assets/Frame 82.png">
-            <p class="kkfrname">{{UserData[0].firstName}} <img  *ngIf="calculateTotal() === 100" src="../assets/Verified Check_.png" alt="pubkins" style="margin-top: -6px;"> </p>
+            <p class="kkfrname">{{UserData[0].firstName}} <img  *ngIf="calculateTotal() === 100" src="../assets/Verified Check_.png" alt="pubkins" style=" width: 20px; margin-top: -6px;"> </p>
             <p class="kkfrname1">Freelancer</p>
             <div class="card-body kkcrdbdy">
               <p class="kkfrname2">Profile Completeness:</p>
