--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -60,9 +60,9 @@
 
   
 <div class="container position-relative">
-  <div class="prset " *ngIf="hide">
+  <div class="prset " *ngIf="hide" (click)="hidden()">
   <div class="kkcrd12">
-    <div class="kkcrd text-center">
+    <div class="kkcrd text-center" (click)="$event.stopPropagation()">
       <div class="kkprimg" *ngIf="User[0].profileUrl">
         <img src="{{  User[0].profileUrl }}" class="rounded-circle kkprimg img-responsive">
     </div>
@@ -72,13 +72,13 @@
         <div class="kkpname">
             <p class="kkprname">{{User[0].firstName}} <img  *ngIf="calculateTotal() === 100" src="../assets/Verified Check_.png" alt="pubkins" style="margin-top: -6px;"> </p>
             <p class="kkprname1">Author</p>
-            <p class="kkprbtn1" routerLink="/setting/wallet"><span class="material-symbols-outlined">
+            <p class="kkprbtn1" routerLink="/setting/wallet" (click)="hidden()"><span class="material-symbols-outlined">
               account_balance_wallet
               </span>Wallet</p>
-              <p class="kkprbtn1" routerLink="/setting/billing-&-payment"><span class="material-symbols-outlined">
+              <p class="kkprbtn1" routerLink="/setting/billing-&-payment" (click)="hidden()"><span class="material-symbols-outlined">
                 settings
                 </span>Setting</p>
-            <button type="button"class="btn kkprbtn2" (click)="logout()">Logout <span class="material-symbols-outlined">
+            <button type="button"class="btn kkprbtn2" (click)="logout()" (click)="hidden()">Logout <span class="material-symbols-outlined">
                 logout
                 </span></button>
         </div>
