--- a/src/app/modules/freelancernav/freelancernav.component.html
+++ b/src/app/modules/freelancernav/freelancernav.component.html
@@ -90,9 +90,9 @@
   </div>
 </div>
 <div class="container position-relative">
-  <div class="prset " *ngIf="hide">
+  <div class="prset " *ngIf="hide" (click)="hidden()">
     <div class="kkcrd12">
-      <div class="kkcrd text-center">
+      <div class="kkcrd text-center" (click)="$event.stopPropagation()">
         <div class="kkprimg" *ngIf="User[0].profileUrl">
           <img src="{{User[0].profileUrl }}" class="rounded-circle kkprimg img-responsive">
         </div>
@@ -103,14 +103,14 @@
           <p class="kkprname">{{User[0].firstName}} <img *ngIf="calculateTotal() === 100"
               src="../assets/Verified Check_.png" alt="pubkins" style="margin-top: -6px;"> </p>
           <p class="kkprname1">Freelancer</p>
-          <p class="kkprbtn1" routerLink="/setting/wallet" routerLinkActive="active"><span
+          <p class="kkprbtn1" routerLink="/setting/wallet" routerLinkActive="active" (click)="hidden()"><span
               class="material-symbols-outlined">
               account_balance_wallet
             </span>Wallet</p>
-          <p class="kkprbtn1" routerLink="/setting/billing-&-payment"><span class="material-symbols-outlined">
+          <p class="kkprbtn1" routerLink="/setting/billing-&-payment" (click)="hidden()"><span class="material-symbols-outlined">
               settings
             </span>Settings</p>
-          <button type="button" class="btn kkprbtn2" (click)="logout()">Logout <span class="material-symbols-outlined">
+          <button type="button" class="btn kkprbtn2" (click)="logout()" (click)="hidden()">Logout <span class="material-symbols-outlined">
               logout
             </span></button>
         </div>
