--- a/src/app/modules/freelancernav/freelancernav.component.scss
+++ b/src/app/modules/freelancernav/freelancernav.component.scss
@@ -178,8 +178,12 @@
            }
        
            .prset { 
-            position: absolute;
-    right: 98px;
+            position: fixed;
+            width: 100%;
+           height: 100%;
+           z-index: 100;
+           left: 0px;
+           top:0px;
            }
            .viewapply { 
                display: inline-flex;
@@ -399,8 +403,12 @@
            }
        
            .prset { 
-            position: absolute;
-    right: 98px;
+            position: fixed;
+             width: 100%;
+            height: 100%;
+            z-index: 100;
+            left: 0px;
+            top:0px;
            }
            .viewapply { 
                display: inline-flex;
@@ -437,11 +445,8 @@
     }
 
 
-
     .kkcrd{
-        margin-top: 62px;
-        /* margin-left: 100px; */
-        width: 146%;
+        width: 250px;
         height: auto;
         z-index: 111;
         flex-shrink: 0;
@@ -450,6 +455,9 @@
         background: #FFF;
         box-shadow: 2px 5px 29px 0px rgba(123, 43, 154, 0.04), -1px 6px 15px 0px rgba(118, 27, 153, 0.43);
       }
+
+
+     
     
       .kkprimg{
         width: 117px;
@@ -460,9 +468,7 @@
     
       }
     
-      .kkcrd12{
-    display: flex;
-      }
+   
     
     .kkprname{
         color: #000;
@@ -513,3 +519,31 @@
     }
 
     
+
+
+
+    @media only screen and (min-width:1601px){
+        .kkcrd12{
+            position: absolute;
+            right: 240px;
+            top:150px;
+              }
+    }
+
+    @media only screen and (min-width:1501px) and (max-width:1600px) {
+        .kkcrd12{
+            position: absolute;
+            right: 150px;
+            top:150px;
+              }
+    }
+
+    @media only screen and (min-width:1001px) and (max-width:1500px) {
+        .kkcrd12{
+            position: absolute;
+            right: 60px;
+            top:150px;
+              }
+
+
+            }
