--- a/src/app/modules/forget-password/forget-password.component.html
+++ b/src/app/modules/forget-password/forget-password.component.html
@@ -22,10 +22,10 @@
             <p class="head" style="margin-top: 32px;">Update Your Password</p>
             <p class="forgetleft">Enter your Email address and select <span class="forgetleft2">Send Email.</span></p>
             <p class="forgetleft1">Email</p>
-            <input type="email" class="int" style="width:430px" placeholder="Email" id="email" name="email">
+            <input type="email" class="int"  id="email" style="width:430px" placeholder="Email" id="email" name="email">
             <div class="flx1">
                 <button class="btnfr1" type="submit"><span>Cancel</span></button>
-                <button class="btnfr2" type="submit" (click)="pasword1()"><span>Send Email</span></button>
+                <button class="btnfr2" type="submit" (click)="pasword1();sendOTP();"><span>Send Email</span></button>
             </div>
         </div>
     </div>
@@ -34,27 +34,34 @@
 <br>
 
 <!-- forget password -->
-
 <div *ngIf="passshow">
-<form>
-    <div class="text-center flx">
-
-        <div class="ecard">
-            <div class="fmt1">
-                <span class="emailforegtpass">
-                    lock
-                </span>
-            </div>
-            <p class="head" style="margin-top: 32px;">Update Your Password</p>
-            <p class="forgetleft1">New Password</p>
-            <input type="password" class="int" style="width:430px" placeholder="New Password" id="newpassword" name="newpassword">
-            <p class="forgetleft1">Confirm Password</p>
-            <input type="password" class="int" style="width:430px" placeholder="Confirm Password" id="currentpassword" name="currentpassword">
-            <div class="flx1">
-                <button class="btnfr2" type="submit"><span>Submit</span></button>
+    <form #OTPForm="ngForm">
+        <div class="text-center flx">
+    
+            <div class="ecard">
+                <div class="fmt1">
+                    <span class="emailforegtpass">
+                        workspace_premium
+                    </span>
+                </div>
+                <p class="head" style="margin-top: 32px;">Verify You Email</p>
+                <p class="forgetleft">Enter your valid OTP and select <span class="forgetleft2">Confirm</span></p>
+                <p class="forgetleft1">OTP</p>
+                <input type="text" class="int"  id="otp_inp" ngModel required name="otpInput"
+                #otpInput="ngModel" style="width:430px" placeholder="OTP"  maxlength="4" minlength="1">
+                <div class="flx1">
+                    <button class="btnfr1" type="submit" (click)="pasword1();"><span>Cancel</span></button>
+                    <button class="btnfr2" type="submit" (click)="verifyOTP();"><span>Confirm</span></button>
+                </div>
             </div>
         </div>
-    </div>
-</form>
+    </form>
 
 </div>
+
+
+
+
+<!-- <input type="email"  class="mailint" id="email" ><br> <button
+class="cemailbtn btn" (click)="sendOTP();">Confirm</button><br> -->
+
