--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -9,7 +9,7 @@
           <p class="rrpubkintxt1" (click)="navigateToProfile('freelancer')">Find Talent</p>
           <p class="rrpubkintxt1" (click)="navigateToProfile('author')">Find Work</p>
           <p class="rrpubkintxt1" routerLink="/WhatisPubKin?">Why us?</p>
-          <p class="rrpubkintxt1" style="color:#A426D1;" (click)="navigateToProfile('all')">Login</p>
+          <p class="rrpubkintxt1" style="color:#A426D1;" (click)="navigateToProfile('login')">Login</p>
           <button type="button" class="btn kksignbtn waves-effect waves-light" (click)="navigateToProfile('all')">Sign
             up</button>
         </div>
