--- a/src/app/modules/footertag/footertag.component.html
+++ b/src/app/modules/footertag/footertag.component.html
@@ -1,22 +1,22 @@
 
 <div class="dtview">
-    <div class="container rrheaderalign">
-      <div class="row">
-        <div class="col-xl-6 col-lg-5">
-          <img src="./assets/logo.png" class="rrlogoimg" routerLink="/">
-        </div>
-        <div class="col-xl-6 col-lg-7">
-          <div class="rrpubkincenteralign1  d-flex  rrpubkinheadalign1" style="margin-top: 22px; float: right;">
-            <p class="rrpubkintxt1">Find Talent</p>
-            <p class="rrpubkintxt1">Find Work</p>
-            <p class="rrpubkintxt1">Why us?</p>
-            <button type="button" class="btn kksignbtn waves-effect waves-light" (click)="navigateToProfile('all')">Sign
-              up</button>
-          </div>
+  <div class="container rrheaderalign">
+    <div class="row">
+      <div class="col-xl-6 col-lg-5">
+        <img src="./assets/logo.png" class="rrlogoimg" routerLink="/">
+      </div>
+      <div class="col-xl-6 col-lg-7">
+        <div class="rrpubkincenteralign1 float-end rrpubkinheadalign1">
+          <p class="rrpubkintxt1" (click)="navigateToProfile('freelancer')">Find Talent</p>
+          <p class="rrpubkintxt1" (click)="navigateToProfile('author')">Find Work</p>
+          <p class="rrpubkintxt1" routerLink="/WhatisPubKin?">Why us?</p>
+          <p class="rrpubkintxt1" style="color:#A426D1;" (click)="navigateToProfile('login')">Login</p>
+          <button type="button" class="btn kksignbtn waves-effect waves-light" (click)="navigateToProfile('all')">Sign
+            up</button>
         </div>
       </div>
     </div>
-  
+  </div>
 
     <div class="container mt-5">
         <div class="row">
