--- a/src/app/modules/footertag/footertag.component.scss
+++ b/src/app/modules/footertag/footertag.component.scss
@@ -1,35 +1,45 @@
 .rrheaderalign {
-    margin-top: 10px;
-  }
-  .rrlogoimg {
-    width: 100px;
-    height: 65px;
-  }
-  .rrpubkintxt1 {
-    color: #453a3a;
-    text-align: center;
-    font-family: 'League Spartan', sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin-right: 20px;
+  margin-top: 10px;
+}
+.rrlogoimg {
+  width: 100px;
+  margin-top: 10px;
+}
+.rrpubkincenteralign1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  }
-  .kksignbtn {
-    color: #fff;
-    background-color: #A426D1;
-    padding: 2px 32px;
-    border-radius: 4px;
-    text-align: center;
-    font-family: 'League Spartan', sans-serif;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    margin-top: -15px;
-    -webkit-box-shadow: 0 2px 5px 2px rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-  }
+.rrpubkinheadalign1 {
+  height: 85px;
+}
+.rrpubkintxt1 {
+  color: #453a3a;
+  text-align: center;
+  font-family: 'League Spartan', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  cursor: pointer;
+  line-height: normal;
+  margin-right: 20px;
+
+}
+.kksignbtn {
+  color: #fff;
+  background-color: #A426D1;
+  padding: 2px 32px;
+  border-radius: 4px;
+  text-align: center;
+  font-family: 'League Spartan', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  margin-top: -15px;
+  -webkit-box-shadow: 0 2px 5px 2px rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+}
 
   .kkaptft{
     width: auto;
@@ -41,7 +51,7 @@ border: 1px solid #A426D1;
   .contentmainhd{
     font-family: 'League Spartan', sans-serif;
     text-align: left;
-    font-size: 30px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     margin-top: 30px;
@@ -51,7 +61,7 @@ border: 1px solid #A426D1;
 
   .contentmainhd1{
     font-family: 'League Spartan', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 300;
     margin-left: 30px;
@@ -63,7 +73,7 @@ border: 1px solid #A426D1;
 
   .kksidehead{
     font-family: 'League Spartan', sans-serif;
-    font-size: 22px;
+    font-size: 19px;
     font-style: normal;
     font-weight: 400;
     margin-left: 40px;
@@ -73,7 +83,7 @@ border: 1px solid #A426D1;
   .kksidehd1{
     font-family: 'League Spartan', sans-serif;
     text-align: justify;
-    font-size: 22px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     margin-left: 30px;
