--- a/src/app/modules/freelancernav/freelancernav.component.scss
+++ b/src/app/modules/freelancernav/freelancernav.component.scss
@@ -449,23 +449,19 @@
       }
     
     .kknavicon{
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .kkcrd{
-        width: 250px;
-        height: auto;
-        z-index: 111;
-        flex-shrink: 0;
-        padding-bottom: 24px;
-        border-radius: 16px;
-        background: #FFF;
+            width: 210px;
+            height: auto;
+            z-index: 111;
+            flex-shrink: 0;
+            padding-bottom: 12px;
+            border-radius: 16px;
+            background: #FFF;
         box-shadow: 2px 5px 29px 0px rgba(123, 43, 154, 0.04), -1px 6px 15px 0px rgba(118, 27, 153, 0.43);
       }
-
-
-     
-    
       .kkprimg{
         width: 105px;
         margin-left: auto;
@@ -501,7 +497,7 @@
       gap: 10px;
       cursor: pointer;
       font-family: "League Spartan";
-      margin-left: 70px;
+      margin-left: 54px;
       color: black;
     }
     .kkprbtn1:active{
@@ -512,14 +508,13 @@
     .kkprbtn2{
       font-family: "League Spartan";
       font-size: 16px;
-    //   margin-top: 10px;
       cursor: pointer;
       background-color: #A426D1;
       color: #FFF;
         display: inline-flex;
-        padding: 9px 13px 8px 13px;
+        padding: 5px;
     align-items: center;
-    gap: 12px;
+    gap: 5px;
         -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
         box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
     
